<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/buttonshape"
    android:clickable="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/windowResult"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:inputType="number"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button33"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="@id/button11"
        app:layout_constraintTop_toTopOf="@id/button11"/>

    <Button
        android:id="@+id/button11"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button22"
        app:layout_constraintTop_toTopOf="@+id/button22"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button22"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/_2"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintStart_toStartOf="@+id/button25"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button33"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/_3"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/button22"
        app:layout_constraintTop_toTopOf="@+id/button22"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button14"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/_4"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintRight_toLeftOf="@+id/button25"
        app:layout_constraintTop_toTopOf="@+id/button25"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button25"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/_5"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button36"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/_6"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/button25"
        app:layout_constraintTop_toTopOf="@+id/button25"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button17"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/_7"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintRight_toLeftOf="@+id/button28"
        app:layout_constraintTop_toTopOf="@+id/button28"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button28"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/_8"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button25"
        app:layout_constraintTop_toBottomOf="@+id/button25"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button3div"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/divis"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/button28"
        app:layout_constraintTop_toTopOf="@+id/button28"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button3multip"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/multip"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/button3div"
        app:layout_constraintTop_toBottomOf="@+id/button3div"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button29"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/_9"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/button28"
        app:layout_constraintTop_toBottomOf="@+id/button28"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button10"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button17"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button1summ"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/summ"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button3equal"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/equal"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/button3multip"
        app:layout_constraintTop_toBottomOf="@+id/button3multip"
        app:strokeWidth="450dp" />

    <Button
        android:id="@+id/button2sub"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="135dp"
        android:layout_height="105dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/sub"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/button29"
        app:layout_constraintTop_toBottomOf="@+id/button29"
        app:strokeWidth="450dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
